docs/api/qiskit/0.19/qiskit.transpiler.CouplingMap.mdx
---
title: CouplingMap (v0.19)
description: API reference for qiskit.transpiler.CouplingMap in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.CouplingMap
---

# CouplingMap

<Class id="qiskit.transpiler.CouplingMap" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/coupling.py" signature="CouplingMap(couplinglist=None, description=None)" modifiers="class">
  Directed graph specifying fixed coupling.

  Nodes correspond to physical qubits (integers) and directed edges correspond to permitted CNOT gates

  Create coupling graph. By default, the generated coupling has no nodes.

  **Parameters**

  *   **couplinglist** (*list or None*) – An initial coupling graph, specified as an adjacency list containing couplings, e.g. \[\[0,1], \[0,2], \[1,2]].
  *   **description** (*str*) – A string to describe the coupling map.

  ## Attributes

  <span id="couplingmap-is-symmetric" />

  ### is\_symmetric

  <Attribute id="qiskit.transpiler.CouplingMap.is_symmetric">
    Test if the graph is symmetric.

    Return True if symmetric, False otherwise
  </Attribute>

  <span id="couplingmap-physical-qubits" />

  ### physical\_qubits

  <Attribute id="qiskit.transpiler.CouplingMap.physical_qubits">
    Returns a sorted list of physical\_qubits
  </Attribute>

  ## Methods

  <span id="couplingmap-add-edge" />

  ### add\_edge

  <Function id="qiskit.transpiler.CouplingMap.add_edge" signature="CouplingMap.add_edge(src, dst)">
    Add directed edge to coupling graph.

    src (int): source physical qubit dst (int): destination physical qubit
  </Function>

  <span id="couplingmap-add-physical-qubit" />

  ### add\_physical\_qubit

  <Function id="qiskit.transpiler.CouplingMap.add_physical_qubit" signature="CouplingMap.add_physical_qubit(physical_qubit)">
    Add a physical qubit to the coupling graph as a node.

    physical\_qubit (int): An integer representing a physical qubit.

    **Raises**

    **CouplingError** – if trying to add duplicate qubit
  </Function>

  <span id="couplingmap-distance" />

  ### distance

  <Function id="qiskit.transpiler.CouplingMap.distance" signature="CouplingMap.distance(physical_qubit1, physical_qubit2)">
    Returns the undirected distance between physical\_qubit1 and physical\_qubit2.

    **Parameters**

    *   **physical\_qubit1** (*int*) – A physical qubit
    *   **physical\_qubit2** (*int*) – Another physical qubit

    **Returns**

    The undirected distance

    **Return type**

    int

    **Raises**

    **CouplingError** – if the qubits do not exist in the CouplingMap
  </Function>

  <span id="couplingmap-draw" />

  ### draw

  <Function id="qiskit.transpiler.CouplingMap.draw" signature="CouplingMap.draw()">
    Draws the coupling map.

    This function needs [pydot](https://github.com/erocarrera/pydot), which in turn needs [Graphviz](https://www.graphviz.org/) to be installed. Additionally, [pillow](https://python-pillow.github.io) will need to be installed.

    **Returns**

    Drawn coupling map.

    **Return type**

    PIL.Image

    **Raises**

    **ImportError** – when pydot or pillow are not installed.
  </Function>

  <span id="couplingmap-from-full" />

  ### from\_full

  <Function id="qiskit.transpiler.CouplingMap.from_full" signature="CouplingMap.from_full(num_qubits, bidirectional=True)" modifiers="classmethod">
    Return a fully connected coupling map on n qubits.
  </Function>

  <span id="couplingmap-from-grid" />

  ### from\_grid

  <Function id="qiskit.transpiler.CouplingMap.from_grid" signature="CouplingMap.from_grid(num_rows, num_columns, bidirectional=True)" modifiers="classmethod">
    Return qubits connected on a grid of num\_rows x num\_columns.
  </Function>

  <span id="couplingmap-from-line" />

  ### from\_line

  <Function id="qiskit.transpiler.CouplingMap.from_line" signature="CouplingMap.from_line(num_qubits, bidirectional=True)" modifiers="classmethod">
    Return a fully connected coupling map on n qubits.
  </Function>

  <span id="couplingmap-from-ring" />

  ### from\_ring

  <Function id="qiskit.transpiler.CouplingMap.from_ring" signature="CouplingMap.from_ring(num_qubits, bidirectional=True)" modifiers="classmethod">
    Return a fully connected coupling map on n qubits.
  </Function>

  <span id="couplingmap-get-edges" />

  ### get\_edges

  <Function id="qiskit.transpiler.CouplingMap.get_edges" signature="CouplingMap.get_edges()">
    Gets the list of edges in the coupling graph.

    **Returns**

    Each edge is a pair of physical qubits.

    **Return type**

    Tuple(int,int)
  </Function>

  <span id="couplingmap-is-connected" />

  ### is\_connected

  <Function id="qiskit.transpiler.CouplingMap.is_connected" signature="CouplingMap.is_connected()">
    Test if the graph is connected.

    Return True if connected, False otherwise
  </Function>

  <span id="couplingmap-reduce" />

  ### reduce

  <Function id="qiskit.transpiler.CouplingMap.reduce" signature="CouplingMap.reduce(mapping)">
    Returns a reduced coupling map that corresponds to the subgraph of qubits selected in the mapping.

    **Parameters**

    **mapping** (*list*) – A mapping of reduced qubits to device qubits.

    **Returns**

    A reduced coupling\_map for the selected qubits.

    **Return type**

    [CouplingMap](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")

    **Raises**

    **CouplingError** – Reduced coupling map must be connected.
  </Function>

  <span id="couplingmap-shortest-undirected-path" />

  ### shortest\_undirected\_path

  <Function id="qiskit.transpiler.CouplingMap.shortest_undirected_path" signature="CouplingMap.shortest_undirected_path(physical_qubit1, physical_qubit2)">
    Returns the shortest undirected path between physical\_qubit1 and physical\_qubit2.

    **Parameters**

    *   **physical\_qubit1** (*int*) – A physical qubit
    *   **physical\_qubit2** (*int*) – Another physical qubit

    **Returns**

    The shortest undirected path

    **Return type**

    List

    **Raises**

    **CouplingError** – When there is no path between physical\_qubit1, physical\_qubit2.
  </Function>

  <span id="couplingmap-size" />

  ### size

  <Function id="qiskit.transpiler.CouplingMap.size" signature="CouplingMap.size()">
    Return the number of physical qubits in this graph.
  </Function>

  <span id="couplingmap-subgraph" />

  ### subgraph

  <Function id="qiskit.transpiler.CouplingMap.subgraph" signature="CouplingMap.subgraph(nodelist)">
    Return a CouplingMap object for a subgraph of self.

    nodelist (list): list of integer node labels
  </Function>
</Class>

